custom scrollbars + heder fixes

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -6,6 +6,11 @@
   align-items: center;
 }
 
+.logoWrapper {
+  margin-left: 112px;
+  margin-right: 289px;
+}
+
 .menuButton {
   display: flex;
   align-items: center;
