--- a/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -8,7 +8,14 @@
   grid-template-columns: 1fr;
   gap: 10px;
   list-style: none;
-  padding: 0;
+  overflow-y: scroll;
+  max-height: 75vh;
+}
+
+.item {
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .totalAndButton {
@@ -20,4 +27,14 @@
 .total {
   display: flex;
   align-items: center;
+}
+
+
+.itemsWrapper::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(47, 47, 55, 1);
+}
+
+.itemsWrapper::-webkit-scrollbar-thumb {
+  background: rgba(133, 133, 173, 1);
 }
